# agentic-design-patterns

./: .gitignore  README.md  main.py  pyproject.toml
src/agents_parallelism/: 10_parallel_query_expansion.ipynb  11_sharded_retrieval.ipynb  12_hybrid_search_fusion.ipynb  13_parallel_context_preprocessing.ipynb  14_multi_hop_retrieval.ipynb  1_parallel_tool_use.ipynb  2_parallel_hypothesis.ipynb  3_parallel_evaluation.ipynb  4_speculative_execution.ipynb  5_hierarchical_agent_teams.ipynb  6_competitive_agent_ensemble.ipynb  7_agent_assembly_line.ipynb  8_decentralized_blackboard.ipynb  9_redundant_execution.ipynb
src/knowledge_graphs/: construct_kg.ipynb  docker-compose.yml  query_kg.ipynb  text_for_rag.ipynb
src/langgraph/: ReAct.ipynb  agentic_search.ipynb  essay_writer_agent.ipynb  example_state.py  human_in_loop.ipynb  lab - Building a Reflection Agent with External Knowledge In.ipynb  lab - Building a Reflection Agent with LangGraph.ipynb  lab - LangGraph101 Building Stateful AI Workflows.ipynb  langgraph_cheatsheet.md  langgraph_components.ipynb  persistence_and_streaming.ipynb  react_from_scratch.py  report_gen_mas.py  structured_outputs.py
src/mcp/: README.md  client_adk.py  client_langgraph.py  server.py
src/memory/: memory_langgraph.py  memory_management.py
src/multimodal/: Build an Image Captioning System with watsonx and Granite.ipynb  Use Mixtral and gTTS to create your personal storyteller.ipynb
src/simple_agents/: Build Interactive LLM Agents with Tools.ipynb  LLM-Powered Data Science LCEL.ipynb  Manual Tool-Calling Agent.ipynb  Text-to-chart in Jupyter notebook Visualization Agent.ipynb  manual-tool-calling-cheatsheet.md  math_agent.py  sql_agent.py  tool_calling_cheatsheet.md
src/vector_databases/: Build a Smarter Search with LangChain Context Retrieval.ipynb  calorie_checker.py  interactive_search.py  system_comparison.py
src/vector_databases/food_recommender/: advanced_search.py  enhanced_rag_chatbot.py  shared_functions.py
src/vector_databases/food_recommender_rag/: interactive_search.py  rag-cheatsheet.md
src/vector_databases/rag/: rag_with_hf.ipynb  rag_with_torch.ipynb
src/vector_databases/retrievers/: llamaindex_retrievers.ipynb  rag_retrievers_cheatsheet.md  retriever_summary.md
src/vector_databases/semantic_similarity/: Semantic Similarity with FAISS.ipynb  hnsw.md
src/workflows/: 1_sequential.py  2_routing.py  3_parallelization.py  4_reflection.py  5_1_tool_calling_crewai.py  5_tool_calling.py  6_planning.py  7_multi_agent.py  8_goal_setting.py
