[project]
name = "agents-experimental"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.1.0",
    "crewai>=0.201.1",
    "fastmcp>=2.12.4",
    "ipykernel>=6.30.1",
    "langchain-mcp-adapters>=0.1.10",
    "nest-asyncio>=1.6.0",
    "numpy>=2.3.3",
    "scipy>=1.16.2",
    "sentence-transformers>=5.1.1",
    "wget>=3.2",
]
