[project]
name = "agents-experimental"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.1.0",
    "crewai>=0.201.1",
    "fastmcp>=2.12.4",
    "ipykernel>=6.30.1",
    "langchain-mcp-adapters>=0.1.10",
    "lark>=1.3.0",
    "llama-index>=0.14.4",
    "llama-index-embeddings-huggingface>=0.6.1",
    "llama-index-llms-huggingface-api>=0.6.1",
    "llama-index-retrievers-bm25>=0.6.5",
    "nest-asyncio>=1.6.0",
    "numpy>=2.3.3",
    "posthog>=5.4.0",
    "pypdf>=6.1.1",
    "pystemmer>=2.2.0.3",
    "rank-bm25>=0.2.2",
    "scipy>=1.16.2",
    "sentence-transformers>=5.1.1",
    "wget>=3.2",
]
