[project]
name = "agents-experimental"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.21.0",
    "chromadb>=1.1.0",
    "crewai>=0.201.1",
    "ddgs>=9.6.1",
    "faiss-cpu>=1.12.0",
    "fastmcp>=2.12.4",
    "gtts>=2.5.4",
    "ipykernel>=6.30.1",
    "langchain-experimental>=0.3.4",
    "langchain-groq>=0.3.8",
    "langchain-huggingface>=0.3.1",
    "langchain-mcp-adapters>=0.1.10",
    "langchain-openai>=0.3.35",
    "langgraph>=1.0.1",
    "langgraph-checkpoint-sqlite>=3.0.0",
    "lark>=1.3.0",
    "llama-index>=0.14.4",
    "llama-index-embeddings-huggingface>=0.6.1",
    "llama-index-llms-huggingface-api>=0.6.1",
    "llama-index-retrievers-bm25>=0.6.5",
    "matplotlib>=3.10.6",
    "mysql-connector-python>=9.4.0",
    "neo4j>=6.0.3",
    "nest-asyncio>=1.6.0",
    "numpy>=2.3.3",
    "posthog>=5.4.0",
    "pypdf>=6.1.1",
    "pystemmer>=2.2.0.3",
    "pytube>=15.0.0",
    "rank-bm25>=0.2.2",
    "scipy>=1.16.2",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.1.1",
    "tabulate>=0.9.0",
    "tavily-python>=0.7.12",
    "tensorflow>=2.20.0",
    "tensorflow-hub>=0.16.1",
    "wget>=3.2",
    "wikipedia>=1.4.0",
    "youtube-transcript-api>=1.2.2",
    "yt-dlp>=2025.9.26",
]
